test/classes/initializers/generics/explicitAssignment.good
explicitAssignment.chpl:17: In function 'main':
explicitAssignment.chpl:18: error: Cannot initialize 'a' of type 'borrowed Foo(real(64))' from a 'borrowed Foo(int(64))'
